Dark mode title header bar & CSS fixes

--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,35 @@
         background-size: cover !important;
         background-repeat: no-repeat !important;
         background-attachment: fixed !important;
-        background: initial !important;
         color: initial !important;
+    }
+
+    @supports ((-webkit-backdrop-filter: blur(5px)) or (backdrop-filter: blur(5px))) {
+        /*Header bar*/
+        .title-blur {
+            position: relative;
+            position: sticky;
+            position: -webkit-sticky;
+            top: 0;
+            width: 100%;
+            padding-top: 20px;
+            backdrop-filter: blur(5px);
+            -webkit-backdrop-filter: blur(5px);
+            background: transparent;
+        }
+    }
+    
+    @supports not ((-webkit-backdrop-filter: blur(5px)) or (backdrop-filter: blur(5px))) {
+        /*Header bar*/
+        .title-blur {
+            position: relative;
+            position: sticky;
+            position: -webkit-sticky;
+            top: 0;
+            width: 100%;
+            padding-top: 20px;
+            background: rgba(255, 255, 255, 0.8);
+        }
     }
 }
 
@@ -16,6 +43,34 @@
         background-size: cover !important;
         background-repeat: no-repeat !important;
         background-attachment: fixed !important;
+    }
+
+    @supports ((-webkit-backdrop-filter: blur(5px)) or (backdrop-filter: blur(5px))) {
+        /*Header bar*/
+        .title-blur {
+            position: relative;
+            position: sticky;
+            position: -webkit-sticky;
+            top: 0;
+            width: 100%;
+            padding-top: 20px;
+            backdrop-filter: blur(5px);
+            -webkit-backdrop-filter: blur(5px);
+            background: transparent;
+        }
+    }
+    
+    @supports not ((-webkit-backdrop-filter: blur(5px)) or (backdrop-filter: blur(5px))) {
+        /*Header bar*/
+        .title-blur {
+            position: relative;
+            position: sticky;
+            position: -webkit-sticky;
+            top: 0;
+            width: 100%;
+            padding-top: 20px;
+            background: rgba(30, 30, 30, 0.8);
+        }
     }
 
     a:link {
@@ -194,34 +249,6 @@
 
 #content-warning:target {
     visibility: hidden;
-}
-
-@supports ((-webkit-backdrop-filter: blur(5px)) or (backdrop-filter: blur(5px))) {
-    /*Header bar*/
-    .title-blur {
-        position: relative;
-        position: sticky;
-        position: -webkit-sticky;
-        top: 0;
-        width: 100%;
-        padding-top: 20px;
-        backdrop-filter: blur(5px);
-        -webkit-backdrop-filter: blur(5px);
-        background: transparent;
-    }
-}
-
-@supports not ((-webkit-backdrop-filter: blur(5px)) or (backdrop-filter: blur(5px))) {
-    /*Header bar*/
-    .title-blur {
-        position: relative;
-        position: sticky;
-        position: -webkit-sticky;
-        top: 0;
-        width: 100%;
-        padding-top: 20px;
-        background: rgba(255, 255, 255, 0.8);
-    }
 }
 
 h2 {
